gitops/platform/layers/networking/values/vault-resources/certificate-and-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway-fabric
      sectionName: https-vault
  hostnames:
    - vault.atlas
  rules:
    - backendRefs:
        - name: vault
          port: 8200
